--- a/UniTwin/Chat/static/styles/style.css
+++ b/UniTwin/Chat/static/styles/style.css
@@ -42,7 +42,6 @@ body {
 }
 
 .msger-header {
-  /* display: flex; */
   font-size: medium;
   justify-content: space-between;
   padding: 10px;
@@ -57,15 +56,19 @@ body {
   overflow-y: auto;
   padding: 10px;
 }
+
 .msger-chat::-webkit-scrollbar {
   width: 6px;
 }
+
 .msger-chat::-webkit-scrollbar-track {
   background: #ddd;
 }
+
 .msger-chat::-webkit-scrollbar-thumb {
   background: #bdbdbd;
 }
+
 .msg {
   display: flex;
   align-items: flex-end;
@@ -82,22 +85,26 @@ body {
   background-size: cover;
   border-radius: 50%;
 }
+
 .msg-bubble {
   max-width: 450px;
   padding: 15px;
   border-radius: 15px;
   background: var(--left-msg-bg);
 }
+
 .msg-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
 }
+
 .msg-info-name {
   margin-right: 10px;
   font-weight: bold;
 }
+
 .msg-info-time {
   font-size: 0.85em;
 }
@@ -109,39 +116,48 @@ body {
 .right-msg {
   flex-direction: row-reverse;
 }
+
 .right-msg .msg-bubble {
   background: var(--right-msg-bg);
   color: #fff;
   border-bottom-right-radius: 0;
 }
+
 .right-msg .msg-img {
   margin: 0 0 0 10px;
 }
 
 .msger-inputarea {
   display: flex;
+  flex-direction: column;
   padding: 10px;
   border-top: var(--border);
   background: #eee;
 }
-.msger-inputarea * {
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
+
+.msger-model-select,
+.msger-input,
+.msger-send-btn {
   font-size: 1em;
+  padding: 10px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
+
 .msger-input {
-  flex: 1;
+  flex-grow: 1;
   background: #ddd;
 }
+
 .msger-send-btn {
-  margin-left: 10px;
-  background: rgb(0, 196, 65);
-  color: #fff;
+  background-color: #4CAF50;
+  color: white;
   font-weight: bold;
   cursor: pointer;
   transition: background 0.23s;
 }
+
 .msger-send-btn:hover {
   background: rgb(0, 180, 50);
 }
